@@ -5641,7 +5641,7 @@
     ],
     "gold": 1500,
     "name": "Infernal Skeleton Knight",
-    "note": "<Armor Weakness: Bludgeoning>\n<Element: Fire, Dark>\n<Passive State: 136, 137>\n\n<Sideview Battler: Monster4_1>\n<Sideview No Collapse>\n<Weapon Image: 266>\n<Attack Animation: 8>\n<HP Gauge Width: 216>\n\n<AI Priority>\nEval !user.hasState(143) +++ State !== Hold the Line III +++ Random 50%: Hold the Line III\n\nEval user.hasState(143) +++ User HP% param < 10% +++ Random 75%: Backstab\n\nState !== Weak Point +++ Random 30%: Nasty Glare\n</AI Priority>\n\n<Enemy Drops>\nMusic Box: 5%\nInfernal Sword: 100%\nLarge Potion: 100%\nLarge Potion: 100%\nLarge Potion: 100%\nLarge Ether: 100%\nFire Essence: 100%\nFire Essence: 100%\nFire Essence: 100%\nDark Essence: 100%\nDark Essence: 100%\nDark Essence: 100%\n</Enemy Drops>\n\n<Night Boost>\nSkeleton Skull: 20% +30%\n</Night Boost>",
+    "note": "<Armor Weakness: Bludgeoning>\n<Element: Fire, Dark>\n<Passive State: 136, 137>\n\n<Sideview Battler: Monster4_1>\n<Sideview No Collapse>\n<Weapon Image: 266>\n<Attack Animation: 8>\n<HP Gauge Width: 216>\n\n<AI Priority>\nEval !user.hasState(143) +++ State !== Hold the Line III +++ Random 50%: Hold the Line III\n\nEval user.hasState(143) +++ User HP% param < 10% +++ Random 75%: Backstab\n\nState !== Weak Point +++ Random 30%: Nasty Glare\n</AI Priority>\n\n<Enemy Drops>\nMusic Box: 5%\nInfernal Essence: 100%\nInfernal Sword: 100%\nLarge Potion: 100%\nLarge Potion: 100%\nLarge Potion: 100%\nLarge Ether: 100%\nFire Essence: 100%\nFire Essence: 100%\nFire Essence: 100%\nDark Essence: 100%\nDark Essence: 100%\nDark Essence: 100%\n</Enemy Drops>\n\n<Night Boost>\nSkeleton Skull: 20% +30%\n</Night Boost>",
     "params": [
       8000,
       0,
@@ -5747,7 +5747,7 @@
     ],
     "gold": 1500,
     "name": "Infernal Skeleton Mage",
-    "note": "<Armor Weakness: Slashing>\n<Element: Fire, Dark>\n<Passive State: 136, 137>\n\n<Sideview Battler: Monster4_2>\n<Sideview No Collapse>\n<Weapon Image: 270>\n<Attack Animation: 147>\n<HP Gauge Width: 216>\n\n<Boost Skill 31: Full>\n<Boost Skill 60: Full>\n<AI Priority>\nEval !user.hasState(143) +++ State !== Amnesia +++ State !== Silenced +++ Random 50%: Disable\nEval !user.hasState(143) +++ State !== Magic Resistant +++ Random 25%: Magic Resistance, Lowest MDF\nEval !user.hasState(143) +++ HP% param <= 90% +++ HP% param > 50% +++ Random 25%: Cure I, Lowest HP%\nEval !user.hasState(143) +++ HP% param <= 50% +++ Random 25%: Cure II, Lowest HP%\n\nEval user.hasState(143) +++ State !== Magic Enhance: Magic Enhance, User\nEval user.hasState(143) +++ HP% param <= 90% +++ Random 25%: Cure II, Lowest HP%\n\n\n</AI Priority>\n\n<Enemy Drops>\nMusic Box: 5%\nInfernal Wand: 100%\nLarge Elixir: 100%\nLarge Elixir: 100%\nLarge Elixir: 100%\nLarge Ether: 100%\nFire Essence: 100%\nFire Essence: 100%\nFire Essence: 100%\nDark Essence: 100%\nDark Essence: 100%\nDark Essence: 100%\n</Enemy Drops>\n\n<Night Boost>\nSkeleton Skull: 20% +30%\n</Night Boost>",
+    "note": "<Armor Weakness: Slashing>\n<Element: Fire, Dark>\n<Passive State: 136, 137>\n\n<Sideview Battler: Monster4_2>\n<Sideview No Collapse>\n<Weapon Image: 270>\n<Attack Animation: 147>\n<HP Gauge Width: 216>\n\n<Boost Skill 31: Full>\n<Boost Skill 60: Full>\n<AI Priority>\nEval !user.hasState(143) +++ State !== Amnesia +++ State !== Silenced +++ Random 50%: Disable\nEval !user.hasState(143) +++ State !== Magic Resistant +++ Random 25%: Magic Resistance, Lowest MDF\nEval !user.hasState(143) +++ HP% param <= 90% +++ HP% param > 50% +++ Random 25%: Cure I, Lowest HP%\nEval !user.hasState(143) +++ HP% param <= 50% +++ Random 25%: Cure II, Lowest HP%\n\nEval user.hasState(143) +++ State !== Magic Enhance: Magic Enhance, User\nEval user.hasState(143) +++ HP% param <= 90% +++ Random 25%: Cure II, Lowest HP%\n\n\n</AI Priority>\n\n<Enemy Drops>\nMusic Box: 5%\nInfernal Essence: 100%\nInfernal Wand: 100%\nLarge Elixir: 100%\nLarge Elixir: 100%\nLarge Elixir: 100%\nLarge Ether: 100%\nFire Essence: 100%\nFire Essence: 100%\nFire Essence: 100%\nDark Essence: 100%\nDark Essence: 100%\nDark Essence: 100%\n</Enemy Drops>\n\n<Night Boost>\nSkeleton Skull: 20% +30%\n</Night Boost>",
     "params": [
       8000,
       0,
