@@ -4456,7 +4456,7 @@
   {
     "id": 150,
     "animationId": 0,
-    "consumable": true,
+    "consumable": false,
     "damage": {
       "critical": false,
       "elementId": 0,
@@ -4464,17 +4464,17 @@
       "type": 0,
       "variance": 20
     },
-    "description": "",
+    "description": "The spiteful energy of \\c[18]Apocalypse\\c[0]'s\nfiery servants. Gives third-degree burns.",
     "effects": [],
     "hitType": 0,
-    "iconIndex": 0,
+    "iconIndex": 119,
     "itypeId": 1,
-    "name": "",
-    "note": "Was once the Empty Bottle.",
-    "occasion": 0,
+    "name": "Infernal Essence",
+    "note": "<Menu Category: Memorabilia>\n\nWas once the Empty Bottle.",
+    "occasion": 3,
     "price": 0,
     "repeats": 1,
-    "scope": 7,
+    "scope": 0,
     "speed": 0,
     "successRate": 100,
     "tpGain": 0
