@@ -49,7 +49,7 @@ Additions:
    > Dark Orb: Tome
    > Wyvern's Fury: Weapon, Tome
    > Ice II: Tome
- - 117 new items:
+ - 118 new items:
   ~ 19 recovery/buff items:
    > Yellow Salve
    > Blueberry Sizzle
@@ -143,7 +143,7 @@ Additions:
    > Whiskerfish
    > Northern Redbelly Dace
    > Blue Crab
-  ~ 29 miscellaneous items:
+  ~ 30 miscellaneous items:
    > Holy Water
    > Cooking Pan
    > Pumpkin
@@ -172,6 +172,7 @@ Additions:
    > Andrew's Ancient Crystal of The Trail's Amazing History
    > [REDACTED TEAR]
    > [REDACTED WING]
+   > [REDACTED ESSENCE]
    > [REDACTED CHIP]
  - 119 pieces of equipment:
   ~ 20 weapons:
